--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ header{
     width:50%;
     margin:auto;
     margin-top:5%;
+    border-top: 3px dotted black;
+    border-left:3px dotted black;
+    border-right: 3px dotted black;
 }
 
 #take-ip{
@@ -25,13 +28,10 @@ input{
     padding:5px;
     font-size: 1rem;
     border-style: none;
-    background-color:slategrey;
-    color: white;
+    color: black;
 }
 
-::placeholder{
-    color:white;
-}
+
 
 button {
     background: transparent;
@@ -39,21 +39,32 @@ button {
     border: 0px solid transparent;
     text-shadow: 0px 0px 0px transparent;
 }
-
+#add-button{
+    background-color: #d6621f;
+    color:white;
+    width:5rem;
+}
+button:hover{
+    transform: scale(1.2);
+    background-color: white;
+}
 #two{
     display: flex;
     justify-content: space-evenly;
-    margin-bottom:30px;
+    margin-bottom:10px;
 }
 
 #two button{
-    font-size: 1rem;
+    font-size: 0.9rem;
+    color:darkslategray;
 }
 
 main{
-    width:40%;
+    width:50%;
     margin:auto;
     text-align: center;
+    border-right: 3px dotted black;
+    border-left: 3px dotted black;
 }
 footer{
     text-align: center;
@@ -62,7 +73,55 @@ footer{
 ul{
     list-style-type: none;
 }
+
 ul div{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width:80%;
+    height:2rem;
+    margin:7px;
+    padding: 5px;
+    margin-left:2rem;
+}
+
+ul div li{
+    font-size: 1rem;
+}
+
+ul div:nth-child(odd){
+    background-color: #f9f9f9;
+}
+
+ul div:hover{
+    background-color: rgb(201, 193, 193);
+}
+i:hover{
+    color:red;
+}
+
+ul div .checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+  }
+
+footer{
+    width:50%;
+    margin: auto;
+    margin-top: -0.5rem;
+    display: flex;
+    justify-content: space-between;
+    border-left: 3px dotted black;
+    border-right: 3px dotted black;
+    border-bottom: 3px dotted black;
+}
+
+footer div{
+    margin-right:10px;
+}
+
+footer button{
+    font-size: 0.9rem;
+    color:darkslategray;
 }
