--- a/style.css
+++ b/style.css
@@ -83,10 +83,12 @@ ul div{
     margin:7px;
     padding: 5px;
     margin-left:2rem;
+    position: relative;
 }
 
 ul div li{
     font-size: 1rem;
+    margin-left:2rem;
 }
 
 ul div:nth-child(odd){
@@ -95,16 +97,13 @@ ul div:nth-child(odd){
 
 ul div:hover{
     background-color: rgb(201, 193, 193);
+    cursor: pointer;
 }
 i:hover{
     color:red;
 }
 
-ul div .checked {
-    background: #888;
-    color: #fff;
-    text-decoration: line-through;
-  }
+
 
 footer{
     width:50%;
@@ -125,3 +124,24 @@ footer button{
     font-size: 0.9rem;
     color:darkslategray;
 }
+
+.complete{
+    background-color:#888;
+  }
+  
+
+
+ul .complete::before {
+    content: '';
+    position: absolute;
+    border-color:black;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+    color:black;
+  }
+
