--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin:0;
     background-image: linear-gradient(#abbaab,#ffffff);
-    font-family: cursive;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
@@ -86,6 +86,7 @@ ul div{
     padding: 5px;
     margin-left:2rem;
     position: relative;
+    border:1px solid slategrey;
 }
 
 ul div li{
@@ -171,7 +172,7 @@ ul .complete::before {
  
 
   @media screen and (max-width:550px){
-    body{
+       body{
         margin: 0;
     }
     main{
